[metadata]
name = requsim
description = A simulation framework for quantum repeaters
long_description = file: README.md
long_description_content_type = text/markdown
author = Julius Wallnöfer
url = https://github.com/jwallnoefer/requsim
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Physics
    Intended Audience :: Science/Research
keywords =
    quantum information
    quantum information theory
    quantum communication
    quantum repeater

[options]
package_dir=
    =src
packages=find:
python_requires = >=3.8.10
install_requires =
    numpy>=1.21.2
    pandas>=1.3.3

[options.packages.find]
where=src

[options.extras_require]
test = pytest>=6.2.5
docs =
    sphinx
    autodocsumm
    recommonmark
    sphinx-rtd-theme
